# serverless-sample

./: .gitignore  README.md  pyproject.toml  spanner-deploy.sh  test.sh
01-datagetter/: common.py  db.py  dbapi.py  deploy.sh  main.py  requirements.txt
01-datagetter/routers/: api.py  test.py
02-transformer/: db.py  dbapi.py  deploy.sh  gcs.py  main.py  requirements.txt
03-requester/: deploy.sh  gcs.py  main.py  requirements.txt
04-workflows/: create-sa.sh  deploy.sh  workflows.yaml
04-workflows/templates/: workflows.yaml
datagetter/: Procfile  db.py  deploy.sh  main.py  requirements.txt
