[tool.poetry]
name = "serverless-sample"
version = "0.1.0"
description = ""
authors = ["shin5ok <shin5ok@55mp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.1.1"
google-cloud-spanner = "3.13.0"
google-cloud-storage = "2.3.0"
gunicorn = "20.1.0"
slack-sdk = "3.15.2"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
